// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Logged in Renders the component 1`] = `
<v-app-stub id="app">
  <applayout-stub data-test="appLayout-component"></applayout-stub>
</v-app-stub>
`;

exports[`App Not logged in Renders the component 1`] = `
<v-app-stub id="app">
  <simplelayout-stub data-test="simpleLayout-component"></simplelayout-stub>
</v-app-stub>
`;
